<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pineapplesoftware.pedroadventures.view.MainActivity">

    <VideoView
        android:id="@+id/mainBackgroundVideoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="-16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.7" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <TextView
            android:id="@+id/mainDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_large_margin"
            android:layout_marginStart="@dimen/default_large_margin"
            android:fontFamily="@font/shadows_into_light_two"
            android:text="@string/main_description"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/mainStartButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginEnd="@dimen/default_large_margin"
            android:layout_marginStart="@dimen/default_large_margin"
            android:background="@drawable/btn_transparent"
            android:fontFamily="@font/amatica_sc"
            android:text="@string/start_adventure"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/creatorsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/default_large_margin"
        android:layout_marginStart="@dimen/default_large_margin"
        android:layout_marginBottom="@dimen/default_medium_margin"
        android:fontFamily="@font/shadows_into_light_two"
        android:text="@string/main_creators"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="16sp" />

</RelativeLayout>
