<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/endRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pineapplesoftware.pedroadventures.view.PrizeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="@dimen/default_extra_large_margin"
        android:fadingEdge="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/endTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_large_margin"
                android:layout_marginStart="@dimen/default_large_margin"
                android:layout_marginTop="@dimen/default_medium_margin"
                android:fontFamily="@font/amatica_sc"
                android:text="Parabéns!"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/endWonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endTitleTextView"
                android:layout_marginEnd="@dimen/default_large_margin"
                android:layout_marginStart="@dimen/default_large_margin"
                android:layout_marginTop="@dimen/default_small_margin"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/answer_description"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/endNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endWonTextView"
                android:layout_marginEnd="@dimen/default_medium_margin"
                android:layout_marginStart="@dimen/default_medium_margin"
                android:layout_marginTop="@dimen/default_medium_margin"
                android:fontFamily="@font/amatica_sc_bold"
                android:maxLines="2"
                android:text="Uma garrafa d\'água!"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="48sp" />

            <RelativeLayout
                android:id="@+id/endImageRelativeLayout"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/endNameTextView"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/default_small_margin"
                android:background="@drawable/img_circle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/endImageView"
                    android:layout_width="@dimen/image_default_size"
                    android:layout_height="@dimen/image_default_size"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <TextView
                android:id="@+id/endDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endImageRelativeLayout"
                android:layout_marginEnd="@dimen/default_medium_margin"
                android:layout_marginStart="@dimen/default_medium_margin"
                android:layout_marginTop="@dimen/default_small_margin"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="Pois abacaxis possuem 79% de Vitamina C, são fontes de Vitamina B-6, Magnésio e Vitamina A, que ajudam no ganho de massa muscular, na digestão e no controle da coagulação sanguínea. "
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/finalAdviceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endDescriptionTextView"
                android:layout_marginEnd="@dimen/default_medium_margin"
                android:layout_marginStart="@dimen/default_medium_margin"
                android:layout_marginTop="@dimen/default_medium_margin"
                android:fontFamily="@font/amatica_sc_bold"
                android:text="@string/final_advice"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="48sp" />

            <Button
                android:id="@+id/endRestartButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginTop="@dimen/default_large_margin"
                android:layout_marginEnd="@dimen/default_large_margin"
                android:layout_marginStart="@dimen/default_large_margin"
                android:layout_marginBottom="@dimen/default_large_margin"
                android:layout_below="@+id/finalAdviceTextView"
                android:background="@drawable/btn_transparent_black"
                android:fontFamily="@font/amatica_sc"
                android:text="@string/restart_button"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>